# ploc

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
benches/: comparison_with_rectilinear_locator.rs  regular_grid.rs  trap_map_VS_quadtree.rs
examples/: regular_grid.rs
proptest-regressions/: lib.txt
proptest-regressions/trapezoidal_map/: trap_map.txt
python/: Cargo.toml  main.py  pyproject.toml
python/examples/: matplotlib_trifinder_event_demo.py
python/ploc/: __init__.py  trapezoidal_map.py
python/src/: lib.rs
src/: dag.rs  dcel.rs  graph.rs  lib.rs  mesh.rs  new_trap_map.rs  point_location.rs  point_locator.rs  quadtree.rs  rectilinear_locator.rs  trapezoidal_map.rs  winding_number.rs
src/trapezoidal_map/: dag.rs  trap_map.rs
