[package]
name = "ploc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
itertools = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"

[[bench]]
name = "comparison_with_rectilinear_locator"
harness = false

[[bench]]
name = "regular_grid"
harness = false
