[package]
name = "ploc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
itertools = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.6.0"
smallvec = "1.13.2"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.2.0"
serde = "1.0.131" # for -Zminimal-versions, via criterion

[[bench]]
name = "comparison_with_rectilinear_locator"
harness = false

[[bench]]
name = "regular_grid"
harness = false
