[package]
name = "ploc"
version = "0.1.2"
edition = "2021"
authors = ["Joffrey Bluthé <joffrey.bluthe@e.email>"]
description = "Point location library"
rust-version = "1.65"
license = "MIT"
repository = "https://github.com/bluthej/ploc"
documentation = "https://docs.rs/ploc/"
readme = "README.md"
keywords = ["geometry", "graph", "data-structures", "library", "algorithms"]
categories = ["science::geo", "data-structures", "algorithms"]
exclude = ["/.github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
itertools = "0.12.1"
rand = "0.9.2"
rand_chacha = "0.3.1"
rayon = "1.6.0"
smallvec = "1.13.2"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.2.0"
serde = "1.0.131" # for -Zminimal-versions, via criterion
version-sync = "0.9.5"
proc-macro2 = "1.0.95" # for cargo-docs-rs (seems related to https://github.com/dtolnay/proc-macro2/issues/499)
rstest = "0.26.1"
delaunator = "1.0.2"

[[bench]]
name = "comparison_with_rectilinear_locator"
harness = false

[[bench]]
name = "regular_grid"
harness = false
